unpackaged/main/default/objects/Account_Profile__c/Account_Profile__c.object-meta.xml
<CustomObject>
    <label>Account Profile</label>
    <nameField>
        <label>Account Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>