unpackaged/main/default/objects/Account_Profile__c/fields/Client_Overview__c.field-meta.xml
<CustomField>
    <fullName>Client_Overview__c</fullName>
    <label>Client Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>