unpackaged/main/default/objects/Account_Profile__c/fields/Current_Circuit_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Circuit_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Circuit Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Profiles (Current Circuit Carrier)</relationshipLabel>
    <relationshipName>Account_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>