unpackaged/main/default/objects/Account_Profile__c/fields/Current_Contract_Info__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Info__c</fullName>
    <label>Current Contract Info</label>
    <type>TextArea</type>
</CustomField>