unpackaged/main/default/objects/Account_Profile__c/fields/Current_Solutions_Fax_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Current_Solutions_Fax_Solutions__c</fullName>
    <label>Current Solutions/Fax Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>