unpackaged/main/default/objects/Account_Profile__c/fields/RCT_QBR_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>RCT_QBR_Approval_Date__c</fullName>
    <description>Value is assigned by the Approval Process for QBR Records.</description>
    <label>QBR Approval Date</label>
    <type>Date</type>
</CustomField>