unpackaged/main/default/objects/Account_Profile__c/fields/Reason_for_Switching__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Switching__c</fullName>
    <label>Reason for Switching</label>
    <type>TextArea</type>
</CustomField>