unpackaged/main/default/objects/Account_Profile__c/fields/X10_Satisfied_with_support_communication__c.field-meta.xml
<CustomField>
    <fullName>X10_Satisfied_with_support_communication__c</fullName>
    <description>10/30 SH: How satisfied are you with the level of support and communication you’ve received?</description>
    <label>10. Satisfied with support/communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>