unpackaged/main/default/objects/Account_Profile__c/fields/X11_Pain_points_or_challenges_with_us__c.field-meta.xml
<CustomField>
    <fullName>X11_Pain_points_or_challenges_with_us__c</fullName>
    <description>10/30 SH: Have there been any pain points or challenges in working with us?</description>
    <label>11. Pain points or challenges with us</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>