unpackaged/main/default/objects/Account_Profile__c/fields/X13_Missing_or_underused_features_serv__c.field-meta.xml
<CustomField>
    <fullName>X13_Missing_or_underused_features_serv__c</fullName>
    <description>11/4 SH: Are there any features or services you feel are missing or underused?</description>
    <label>13. Missing or underused features/serv?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>