unpackaged/main/default/objects/Account_Profile__c/fields/X14_Feedback_on_improving_prod_service__c.field-meta.xml
<CustomField>
    <fullName>X14_Feedback_on_improving_prod_service__c</fullName>
    <description>11/4 SH: Do you have feedback on how we can improve our product/service offering?</description>
    <label>14. Feedback on improving prod/service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>