unpackaged/main/default/objects/Account_Profile__c/fields/X15_Opportunities_for_collaboration__c.field-meta.xml
<CustomField>
    <fullName>X15_Opportunities_for_collaboration__c</fullName>
    <description>11/4 SH: Do you see any opportunities for deeper collaboration or new projects we could support?</description>
    <label>15. Opportunities for collaboration?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>