unpackaged/main/default/objects/Account_Profile__c/fields/X16_Ways_to_meet_goals_next_quarter__c.field-meta.xml
<CustomField>
    <fullName>X16_Ways_to_meet_goals_next_quarter__c</fullName>
    <description>11/4 SH: Are there any additional ways we can help you meet your goals in the upcoming quarter?</description>
    <label>16. Ways to meet goals next quarter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>