unpackaged/main/default/objects/Account_Profile__c/fields/X17_How_will_partnership_evolve__c.field-meta.xml
<CustomField>
    <fullName>X17_How_will_partnership_evolve__c</fullName>
    <description>11/4 SH: How do you see our partnership evolving over the next year?</description>
    <label>17. How will partnership evolve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>