unpackaged/main/default/objects/Account_Profile__c/fields/X18_What_is_success_and_how_can_we_help__c.field-meta.xml
<CustomField>
    <fullName>X18_What_is_success_and_how_can_we_help__c</fullName>
    <description>11/4 SH: What does success look like for you in the next quarter, and how can we contribute to that success?</description>
    <label>18. What is success and how can we help</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>