unpackaged/main/default/objects/Account_Profile__c/fields/X19_Changes_since_last_QBR__c.field-meta.xml
<CustomField>
    <fullName>X19_Changes_since_last_QBR__c</fullName>
    <description>11/4 SH: Based on our last QBR has anything changed?</description>
    <label>19. Changes since last QBR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>