unpackaged/main/default/objects/Account_Profile__c/fields/X20_Microsoft_365_provider_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>X20_Microsoft_365_provider_satisfaction__c</fullName>
    <description>11/4 SH:  Do you use Microsoft 365?  Who provides you 365 licenses?   Are you happy with your provider?</description>
    <label>20. Microsoft 365 provider satisfaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>