unpackaged/main/default/objects/Account_Profile__c/fields/X2_Top_3_goals_next_quarter_year__c.field-meta.xml
<CustomField>
    <fullName>X2_Top_3_goals_next_quarter_year__c</fullName>
    <description>10/15 SH: QBR Fields</description>
    <inlineHelpText>What are your top three business goals for the next quarter/year?</inlineHelpText>
    <label>2. Top 3 goals next quarter/year?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>