unpackaged/main/default/objects/Account_Profile__c/fields/X3_New_initiatives_or_challenges__c.field-meta.xml
<CustomField>
    <fullName>X3_New_initiatives_or_challenges__c</fullName>
    <description>10/15 SH: QBR Fields</description>
    <inlineHelpText>How can we better align our services/products with your evolving strategy?</inlineHelpText>
    <label>3. New initiatives or challenges?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>