unpackaged/main/default/objects/Account_Profile__c/fields/X4_Align_services_products_with_strategy__c.field-meta.xml
<CustomField>
    <fullName>X4_Align_services_products_with_strategy__c</fullName>
    <description>10/18 SH</description>
    <inlineHelpText>How can we better align our services/products with your evolving strategy?</inlineHelpText>
    <label>4. Align services/products with strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>