unpackaged/main/default/objects/Account_Profile__c/fields/X8_Most_valuable_areas_of_partnership__c.field-meta.xml
<CustomField>
    <fullName>X8_Most_valuable_areas_of_partnership__c</fullName>
    <description>10/30 SH: Which areas of our partnership have provided the most value to your business?</description>
    <label>8. Most valuable areas of partnership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>