unpackaged/main/default/objects/Account_Profile__c/recordTypes/QBR.recordType-meta.xml
<RecordType>
    <fullName>QBR</fullName>
    <active>true</active>
    <description>Quarterly Business Review</description>
    <label>QBR</label>
</RecordType>