unpackaged/main/default/objects/Account_Profile__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Default Account Profile</description>
    <label>Standard</label>
</RecordType>